--- a/templates/website/index.html.twig
+++ b/templates/website/index.html.twig
@@ -7,7 +7,7 @@
         <div class="block">
             <img src="{{ asset('build/img/caprica.png') }}" alt="">
             <h1 class="h1 text-center">Welcome to Caprica parking orbit</h1>
-            <p class="text-center">Please wait further instructions.</p>
+            <p class="text-center">Please await further instructions.</p>
         </div>
     </div>
 {% endblock %}
